--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@
 #
 #=========================================================================================
 
-base_url = "https://example.com"
+base_url = "https://johnmaxrin.github.io/johnmaxrin/"
 title = "60b36t"
 description = "xxxx xxxx xxxx"
 default_language = "en"
