--- a/config.toml
+++ b/config.toml
@@ -44,6 +44,7 @@ anchors = "on"
 sections = [
   { name = "posts", path = "/posts", is_external = false },
   { name = "about", path = "/about", is_external = false },
+  { name = "projects", path = "/projects", is_external = false },
 
   # { name = "tags", path = "/tags", is_external = false },
   # { name = "github", path = "https://github.com/<your-username>", is_external = true },
