--- a/content/projects/card.toml
+++ b/content/projects/card.toml
@@ -1,5 +1,5 @@
 [[collection]]
-type = "art_simple"
+type = "card"
 title = "The Hobbit"
 subtitle = "J.R.R. Tolkien"
 date = "1937"
@@ -10,7 +10,7 @@ tags = ["Fantasy", "Adventure"]
 img = "https://images.unsplash.com/photo-1728044849533-7ebd39199597?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
 
 [[collection]]
-type = "art_simple"
+type = "card"
 title = "Dune"
 subtitle = "Frank Herbert"
 date = "1965"
