--- a/projects.toml
+++ b/projects.toml
@@ -2,30 +2,32 @@
 type = "card"
 icon = "/img/language.png"
 title = "StarPlat MLIR"
-subtitle = "AI Researcher"
+subtitle = "DSL Compiler with MLIR Stack"
 date = "2025 Jan - Present"
 content = """\
-Work on the DeepSeek project, a research project that aims to develop a new generation of AI models that can understand and generate natural language text.
+Redesigned and implemented the entire compiler infrastructure for the Starplat domain-specific language (DSL) 
+using the MLIR (Multi-Level Intermediate Representation) framework. Developed a custom MLIR dialect tailored to 
+the semantics of the Starplat DSL, enabling progressive lowering through MLIR levels down to LLVM IR for efficient code
+ generation. This approach enhanced modularity, extensibility, and performance optimization opportunities in the compilation pipeline.
 
-The project is focused on developing models that can generate text that is coherent, informative, and engaging, and that can be used in a wide range of applications, including chatbots, virtual assistants, and content generation tools.
 """
 
 [[collection]]
 type = "card"
 icon = "/img/semiconductor.png"
-title = "OpenAI"
-subtitle = "Machine Learning Engineer"
+title = "AF754"
+subtitle = "IEEE 754-Compliant Activation Functions for Hardware"
 date = "2021-2025"
 content = """\
-Alone with the team, I worked on developing new machine learning models and algorithms for a wide range of applications, including natural language processing, computer vision, and reinforcement learning. I also worked on developing new tools and frameworks for training and deploying machine learning models, and on building systems that can scale to handle large amounts of data and compute resources.
+Developed a suite of high-performance activation functions implemented in Bluespec, designed for seamless integration into hardware accelerators. The library ensures full compliance with the IEEE 754 floating-point standard, making it suitable for precision-critical machine learning and signal processing applications.
 """
 
 [[collection]]
 type = "card"
 icon = "/img/gear.png"
 title = "AutoRegex"
-subtitle = "A Regex Engine Inspired by the Dragon Book"
+subtitle = "DFA-Based Regular Expression Engine"
 date = "Sep 2023 - Oct 2023"
 content = """\
-A Regex engine that converts regular expressions into deterministic finite automata (DFA) and uses the resulting DFA to match patterns. The algorithm employed in this conversion is based on the well-known "Dragon Book" (Compilers Principles, Techniques and Tool by ALSU).
+Designed and implemented a custom regular expression engine that converts regex patterns into deterministic finite automata (DFA) for efficient pattern matching. The conversion algorithm is based on the foundational techniques presented in the "Dragon Book" (Compilers: Principles, Techniques, and Tools by Aho, Lam, Sethi, and Ullman).
 """
