--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,8 @@ anchors = "on"
 [extra]
 
 sections = [
-  { name = "posts", path = "/posts", is_external = false },
+  { name = "news", path = "/news", is_external = false },
+  { name = "blog", path = "/posts", is_external = false },
   { name = "about", path = "/about", is_external = false },
   # { name = "projects", path = "/projects", is_external = false },
 
@@ -50,7 +51,7 @@ sections = [
   # { name = "github", path = "https://github.com/<your-username>", is_external = true },
 ]
 
-blog_section_path = "/posts"
+blog_section_path = "/news"
 
 back_link_text = "Back" # Text of the back button
 force_theme = false # false | "light" | "dark"
