--- a/config.toml
+++ b/config.toml
@@ -45,6 +45,7 @@ sections = [
   { name = "news", path = "/news", is_external = false },
   { name = "blog", path = "/posts", is_external = false },
   { name = "about", path = "/about", is_external = false },
+  { name = "publications", path = "/publications", is_external = false },
   # { name = "projects", path = "/projects", is_external = false },
 
   # { name = "tags", path = "/tags", is_external = false },
